# heis_simulator

./: Cargo.toml  bygg.rs
src/: README.md  analyser_tur.rs  betjene_heisen.rs  bevegelse_kontroller.rs  bygninger.rs  data_registreringer.rs  fysikk.rs  heis1.c  heis2.c  heis3.c  heis_driver.rs  lib.rs  motor1.c  motor2.c  motor3.c  motor_kontroller.rs  simulere_tur.rs  turplanlegging.rs
