[package]
name = "heis_simulator"
version = "0.1.0"
edition = "2024"
build = "bygg.rs"

[dependencies]
floating-duration = "0.1.2"
termion = "4.0.5"
timebomb = "0.1.2"
serde = "1.0.219"
serde_json = "1.0.14"
serde_derive = "1.0.219"
libc = "0.2.17"

[[bin]]
name = "simulere_tur"
path = "src/simulere_tur.rs"

[[bin]]
name = "analyser_tur"
path = "src/analyser_tur.rs"

[[bin]]
name = "betjene_heisen"
path = "src/betjene_heisen.rs"
